@@ -1,6 +1,7 @@
 xx Nov 2006: 0.3.1 Miek <miek@miek.nl>
    -- fixes --
    * print the bytes transfered with 1 decimal
+   * compilation fix when you don't have xattr (on Linux)
 
 29 Oct 2006: 0.3.0 Miek <miek@miek.nl>
    -- minor fixes --
